[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/console.png" type="Texture" id=1]
[ext_resource path="res://console.gd" type="Script" id=2]
[ext_resource path="res://interact_area.gd" type="Script" id=3]
[ext_resource path="res://scenes/simple_progress_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/arrow_up.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12 )

[node name="console" type="Node2D" groups=[
"give_resource",
]]
script = ExtResource( 2 )

[node name="console" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="interact_area" type="Area2D" parent="." groups=[
"interactable",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_area"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="progress_bar" parent="." instance=ExtResource( 4 )]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -24.0

[node name="arrow_up" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -40 )
texture = ExtResource( 5 )
[connection signal="interacted" from="interact_area" to="." method="_on_interact_area_interacted"]
